src/objects/ReturnDetails__c.object
<CustomObject>
    <fields>
        <fullName>ORDER__c</fullName>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>回款明细</relationshipLabel>
        <relationshipName>ORDER12</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RemittanceDate__c</fullName>
        <label>回款日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepaymentAmount__c</fullName>
        <label>回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RepaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>回款方式</label>
        <referenceTo>PaymentMethod__c</referenceTo>
        <relationshipLabel>回款明细</relationshipLabel>
        <relationshipName>RepaymentMethod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>回款明细</label>
    <nameField>
        <label>回款明细名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>回款明细</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>